--- a/dashboard2.css
+++ b/dashboard2.css
@@ -265,3 +265,23 @@ hr
     margin-left: 20px;
     margin-right: 20px;
 }
+.nomeconta
+{
+    text-transform:uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+.div-principal {
+    display: flex;         /* Ativa o flexbox */
+    justify-content: space-between; /* Distribui as sub-divs uniformemente */
+    align-items: flex-end; /* Alinha as sub-divs na parte inferior */
+    height: 200px;         /* Definido apenas para demonstração. Ajuste conforme necessário. */
+    border: 1px solid black; /* Borda para visualização. Opcional. */
+}
+
+.sub-div {
+    width: 30%;            /* Ajuste a largura conforme necessário. */
+    height: 100px;         /* Definido apenas para demonstração. Ajuste conforme necessário. */
+    border: 1px solid red; /* Borda para visualização. Opcional. */
+}
