--- a/dashboard2.css
+++ b/dashboard2.css
@@ -228,7 +228,6 @@ hr
     color: rgb(0, 0, 0);
     padding: 4px 16px; 
     text-align: center;
-    text-decoration: none; 
     display: inline-block; 
     font-size: 16px; 
     cursor: pointer;
@@ -306,11 +305,10 @@ hr
     justify-content: space-around;
     font-size: 12px;
     white-space: nowrap;
-    margin-top: 5px;
     height: 50%;
     margin-right: 35px;
     margin-left: 35px;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
 }
 .fotoperfil
 {
@@ -332,7 +330,7 @@ hr
    
     margin-left: 225px;
     margin-top: 30px;
-    margin-bottom: 15px;
+
    
 }
 .nome_foto
@@ -349,4 +347,5 @@ hr
 .fotoperfil
 {
     margin-bottom: 15px;
+    border-radius: 100%;
 }
